--- a/index.html
+++ b/index.html
@@ -4,16 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Format Converter</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            max-width: 500px;
+            width: 90%;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 24px;
+            font-weight: 500;
+            color: #424242;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-size: 16px;
+            color: #616161;
+            font-weight: 500;
+        }
+
+        .file-field input[type="file"] {
+            padding: 5px;
+        }
+
+        .btn {
+            background-color: #007BFF;
+            font-weight: 500;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h1>JSON Format Converter</h1>
         <form id="jsonForm" enctype="multipart/form-data" method="POST" action="convert.php">
-            <label for="jsonFile">Upload JSON File:</label>
-            <input type="file" id="jsonFile" name="jsonFile" accept=".json" required>
-            <button type="submit">Convert</button>
+            <div class="file-field input-field">
+                <div class="btn">
+                    <span>Choose File</span>
+                    <input type="file" id="jsonFile" name="jsonFile" accept=".json" required>
+                </div>
+                <div class="file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Upload your JSON file">
+                </div>
+            </div>
+            <button type="submit" class="btn waves-effect waves-light">Convert</button>
         </form>
     </div>
+
+    <script>
+        document.getElementById('jsonForm').addEventListener('submit', function (e) {
+            const fileInput = document.getElementById('jsonFile');
+            if (!fileInput.value.endsWith('.json')) {
+                e.preventDefault();
+                M.toast({ html: 'Please upload a valid JSON file.', classes: 'red lighten-1' });
+            }
+        });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
